# gardener

./: Cargo.toml  TODO.md  flake.nix  with-cap.sh
nixos/: backup.nix  default.nix  home-manager.nix  system-modules.nix  user-modules.nix
src/: config.rs  lib.rs  main.rs  tracked.rs  tree.rs  untracked.rs
src/declarative/: mod.rs  tree.rs
