[package]
name = "gardener"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.49"
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
systemd_tmpfiles = "0.2.7"

[patch.crates-io]
systemd_tmpfiles = { path = "/home/nullie/Documents/third-party-projects/paketkoll/crates/systemd_tmpfiles" }
